--- a/src/components/editor/aq-editor-home-menu.html
+++ b/src/components/editor/aq-editor-home-menu.html
@@ -141,7 +141,7 @@
 		<aq-check-authentication id='authItem'></aq-check-authentication>
 
 	    <div class="toolbar layout horizontal">
-            <paper-checkbox noink class="checkbox-all" on-change="handleChange"></paper-checkbox>
+            <paper-checkbox noink class="checkbox-all" checked="{{checkAll}}" on-change='onCheckAllStrategies'></paper-checkbox>
 	    	<div class="flex self-center"><p class="strategy-header">ALL STRATEGIES</p></div>
 	      	<!--<div id="search" class="flex">-->
 	    		<!--<paper-icon-button noink title="Go Back" icon="aq-icons:arrow-back" on-tap="toggle"></paper-icon-button>-->
@@ -191,14 +191,13 @@
 					type:String,
 					value:"",
 				},
-			},
-            ready:function () {
-                var element = this;
-                document.querySelector('aq-editor-home').addEventListener('deletion-successful',function (e) {
-                    element.$$('paper-checkbox').checked=false;
-                });
 
-            },
+				checkAll:{
+					type: Boolean,
+					value: false,
+					notify: true,
+				},
+			},
 
 			toggle: function() {
 				var d = this.$$('#search').style.display;
@@ -252,8 +251,10 @@
             	this.searchText = this.$$('#searchbox').value;
             	this.fire('search-action',{searchtext: this.searchText});
             },
-            handleChange: function () {
-                this.fire('all-selected',{content:"All Items Selected"});
+
+            onCheckAllStrategies: function() {
+            	console.log("Firing signal");
+                this.fire('iron-signal', {name:'select-strategy'});
             }
 
 		});
