--- a/src/components/editor/aq-editor-home-strategy-item.html
+++ b/src/components/editor/aq-editor-home-strategy-item.html
@@ -171,6 +171,7 @@
             },
 
             goToAnalyze: function () {
+                console.log("Hello");
                 if (this.numBacktest > 0) {
                     this.fire('analyzeClicked', {id: this.strategyId});
                 }
