--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -171,7 +171,7 @@
         <template is='dom-if' if='{{!loading}}'>
             <div id='container'>
 
-                <aq-editor-home-menu check-all="{{checkAll}}"" active-delete="[[hasCheckedStrategies(checkedCount)]]"></aq-editor-home-menu>
+                <aq-editor-home-menu check-all="{{checkAll}}" active-delete="[[hasCheckedStrategies(checkedCount)]]"></aq-editor-home-menu>
 
                 <div id="ifsearch">
                     <p>Strategy results for:
