--- a/src/components/editor/aq-editor-home-menu.html
+++ b/src/components/editor/aq-editor-home-menu.html
@@ -198,7 +198,9 @@
 					notify: true,
 				},
 			},
-
+            ready:function () {
+                this.$$('#searchbox').focus();
+            },
 			toggle: function() {
 				var d = this.$$('#search').style.display;
 				if(d == 'block') {
@@ -234,6 +236,7 @@
                 if (e.keyCode === 27) {
                     this.$$('#searchbox').value="";
                     this.$$('#searchbox').blur();
+					//this.blur();
                 } else if (e.keyCode === 13) {
                 	this.debounce('search', this.search, 50);
                 } 
@@ -241,7 +244,7 @@
 
             blur: function() {
             	if(this.$$('#searchbox').value=="") {
-            		this.$$('#search').style.display = 'none';
+            		//this.$$('#search').style.display = 'none';
 					this.$$('#menu-icons').style.display = 'inline';
 					this.debounce('search', this.search, 50);
 				} 
@@ -250,6 +253,7 @@
             search: function() {
             	this.searchText = this.$$('#searchbox').value;
             	this.fire('search-action',{searchtext: this.searchText});
+
             },
 
             onCheckAllStrategies: function() {
