All Backtest page update

--- a/src/components/editor/aq-editor-home-strategy-item.html
+++ b/src/components/editor/aq-editor-home-strategy-item.html
@@ -92,8 +92,8 @@
             position: absolute;
             margin-right: 10px;
             transform: scale(0,1);
-
-            transition: all 0.3s ease-in-out;
+            transform-origin: left;
+            transition: all 0.2s ease-in-out;
         }
 
         .strategy-name {
